# ManifoldLearning

./: README.md  pyproject.toml
examples/turbomachine/: turbomachine.ipynb
src/manifold_learning/: __init__.py  features.py  grassmann.py  manifolds.py  ridge.py
